--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <p id="text"></p>
+    <button id="greeting">Greet</button>
+    <div id="circle"></div>
 
     <!-- /socket.io/socket.io.js
         This is expose the library when socket with conected
